# multiplayer-game-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  clangcompile.sh  client  client.cpp  compile.sh  compilewasm.sh  coolfunctions.hpp  design stuff without interruptions.txt  eli.cpp  environmentVars.sh  gamewrite.txt  gamewritefile.txt  gdbdebug.sh  installRequiredPackages.sh  isSettingsChanged.sh  notes.txt  required packages.txt  run.sh  runClient.sh  runServer.sh  runTest.sh  save data translator  saveData.sh  server  server.cpp  shell.html  test  test.cpp  test_client.cpp  testcompile.sh  vcpkg.json  webclient.cpp
assets/: player1.xcf
cmake/: FindlibX11.cmake
libs/: KeyboardHelper.h  KeyboardHelper.m  enemy.hpp  pathfinding.hpp  secure_send.hpp
